# satania

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
data/shaders/: BVH.comp  aabb.frag  aabb.vert  chunk.frag  chunk.geom  chunk.vert  diffuse.frag  diffuse.vert  voxelizer.comp
src/: aabb.hpp  bvh.hpp  camera.h  camera.hpp  main.cpp  mca.hpp  mesh.hpp  nbt.hpp  timer.hpp  voxelizer.hpp
